--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,30 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-162805273-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-162805273-1');
+</script>
   <meta charset="utf-8">
-  <title>Covid</title>
+  <title> Covid-19 Helper</title>
   <base href="/">
+  <link rel="icon" href="./assets/ugh png.png" type="image/gif">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
 </head>
 <body>
+
   <app-root></app-root>
+  <script  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCzqvv7MkNQvA-ZqAR6i1nYWlKs3cYV_zE"
+  type="text/javascript"></script>
+
 </body>
 </html>
